# vbsa

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
data/: aci.dct  acs.dct  oftr.dct
data/actint/: items.inc
data/iscreen/: ext_evnt.h  oftr.scr  oftr2.scr  temp.scr
data/iscreen/scripts/: btn00.inc  btn01.inc  btn02.inc  btn03.inc  btn04.inc  btn05.inc  btn06.inc  btn07.inc  bugs.inc  buttons.inc  cr0.inc  cr1.inc  cr2.inc  cr3.inc  cr4.inc  cr_main1.inc  cr_main2.inc  gameobj.inc  gamescr.inc  i_chat.inc  l0.inc  l1.inc  l2.inc  l3.inc  l4.inc  l5.inc  l6.inc  l7.inc  main.inc  mainmenu.inc  mainmenu.scr  mmenu1.inc  mmenu2.inc  oftr.inc  pnl00.inc  pnl01.inc  pnl02.inc  pnl04.inc  pnl05.inc  pnl06.inc  (+6 more)
data/iscreen/scripts/escave/: bt00.inc  bt01.inc  bt02.inc  bt03.inc  bt04.inc  bt05.inc  bt06.inc  bt07.inc  bt08.inc  bt09.inc  bt10.inc  bt11.inc  bt12.inc  bt13.inc  bt14.inc  bt15.inc  escave00.inc  escave01.inc  escave02.inc  escave03.inc
lib/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/assembler/: Assembler.cpp  Assembler.h  analyze-tool.cpp  analyze-tool.h
src/assembler/file-process/: inter-directive.h
src/assembler/file-process/raw/: FilePreprocessor.cpp  FilePreprocessor.h  RawFileProcessor.cpp  RawFileProcessor.h  file-trace.cpp  file-trace.h
src/assembler/file-process/token/: FileMathProcessor.cpp  FileMathProcessor.h  TokenFileProcessor.cpp  TokenFileProcessor.h  token-trace.cpp  token-trace.h
src/common/: DictParser.cpp  DictParser.h  Dictionary.cpp  Dictionary.h  parse-data.cpp  parse-data.h  vangers-data.h
src/core/: Logger.cpp  Logger.h  arg-parse.cpp  arg-parse.h
src/formatter/: Formatter.cpp  Formatter.h
src/vvm/: IscreenVirtualUnit.cpp  IscreenVirtualUnit.h  VangersVirtualMachine.cpp  VangersVirtualMachine.h  VvmConsole.cpp  VvmConsole.h  local-dictionaries.h  oftr-test-impl.cpp
